--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -203,10 +203,28 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606221849179_InitialModel.cs" />
+    <Compile Include="Migrations\201606221849179_InitialModel.Designer.cs">
+      <DependentUpon>201606221849179_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606221900322_IsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201606221900322_IsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201606221900322_IsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606221904175_AddMembershipType.cs" />
+    <Compile Include="Migrations\201606221904175_AddMembershipType.Designer.cs">
+      <DependentUpon>201606221904175_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606221905459_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201606221905459_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201606221905459_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -289,6 +307,20 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201606221849179_InitialModel.resx">
+      <DependentUpon>201606221849179_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606221900322_IsSubscribedToCustomer.resx">
+      <DependentUpon>201606221900322_IsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606221904175_AddMembershipType.resx">
+      <DependentUpon>201606221904175_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606221905459_PopulateMembershipTypes.resx">
+      <DependentUpon>201606221905459_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
