--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201606221905459_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>201606221905459_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606221923019_ApplyMigrationsToCustomerName.cs" />
+    <Compile Include="Migrations\201606221923019_ApplyMigrationsToCustomerName.Designer.cs">
+      <DependentUpon>201606221923019_ApplyMigrationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606221905459_PopulateMembershipTypes.resx">
       <DependentUpon>201606221905459_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606221923019_ApplyMigrationsToCustomerName.resx">
+      <DependentUpon>201606221923019_ApplyMigrationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
