--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -243,6 +243,10 @@
     <Compile Include="Migrations\201606222226231_InsertGenres.Designer.cs">
       <DependentUpon>201606222226231_InsertGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606231640431_MovieAdjustment.cs" />
+    <Compile Include="Migrations\201606231640431_MovieAdjustment.Designer.cs">
+      <DependentUpon>201606231640431_MovieAdjustment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -254,6 +258,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -324,6 +329,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -366,6 +372,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606222226231_InsertGenres.resx">
       <DependentUpon>201606222226231_InsertGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606231640431_MovieAdjustment.resx">
+      <DependentUpon>201606231640431_MovieAdjustment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
