--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -271,6 +271,10 @@
     <Compile Include="Migrations\201606231640431_MovieAdjustment.Designer.cs">
       <DependentUpon>201606231640431_MovieAdjustment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606271843425_SeedUsers.cs" />
+    <Compile Include="Migrations\201606271843425_SeedUsers.Designer.cs">
+      <DependentUpon>201606271843425_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -575,6 +579,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606231640431_MovieAdjustment.resx">
       <DependentUpon>201606231640431_MovieAdjustment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606271843425_SeedUsers.resx">
+      <DependentUpon>201606271843425_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
