--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Vidly-20160616105115.mdf;Initial Catalog=aspnet-Vidly-20160616105115;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=CR1ITS0007\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-Vidly-20160616105115.mdf;Initial Catalog=Vidly;Integrated Security=false;User Id=sa; password=5x32!CFbm1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
