--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -275,6 +275,10 @@
     <Compile Include="Migrations\201606271843425_SeedUsers.Designer.cs">
       <DependentUpon>201606271843425_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606281621333_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201606281621333_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201606281621333_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -284,6 +288,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -530,10 +535,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -582,6 +588,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606271843425_SeedUsers.resx">
       <DependentUpon>201606271843425_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606281621333_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201606281621333_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
